img filepath changed

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     </div>
     <div class="cards">
       <div class="card">
-        <img src="../images/undraw_farm_girl_dnpe.svg" alt="">
+        <img src="images/undraw_farm_girl_dnpe.svg" alt="">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
       <div class="card">
-        <img src="../images/undraw_gone_shopping_vwmc.svg" alt="">
+        <img src="images/undraw_gone_shopping_vwmc.svg" alt="">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
       <div class="card">
-        <img src="../images/undraw_nature_on_screen_xkli.svg" alt="">
+        <img src="images/undraw_nature_on_screen_xkli.svg" alt="">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
